@@ -1,5 +1,8 @@
 Release Notes
 
+* 12/28/2014
+  * fixed updateUnmerged so that merging jobs fail only when max attempt is reached
+
 * 12/15/2014
   * removed redundant log sending
   * added days to getScriptOfflineRunning
